--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "An Ethereum Marketplace",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -14,12 +18,14 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "framer-motion": "^5.5.6",
     "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "react-icons": "^4.3.1",
+    "react-scripts": "^5.0.0",
+    "truffle": "^5.4.27",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
