--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "16.8.4",
     "react-icons": "^4.3.1",
+    "react-router-dom": "6",
     "react-scripts": "^5.0.0",
     "truffle": "^5.4.27",
     "web3": "^1.6.1"
