--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "chai-bignumber": "3.0.0",
     "framer-motion": "^5.5.6",
     "react": "16.8.4",
-    "react-bootstrap": "^1.6.4",
+    "react-app-rewired": "^2.1.11",
+    "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
     "react-icons": "^4.3.1",
-    "react-router-dom": "6",
-    "react-scripts": "^5.0.0",
-    "truffle": "^5.4.27",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "2.1.3",
+    "truffle": "^5.4.26",
     "web3": "^1.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
